--- a/package.json
+++ b/package.json
@@ -10,10 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^2.2.6",
+    "axios": "^1.7.2",
+    "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-lazy-load-image-component": "^1.6.2",
+    "react-redux": "^9.1.2",
     "react-router-dom": "^6.24.1"
   },
   "devDependencies": {
@@ -35,7 +39,7 @@
     "style-loader": "^4.0.0",
     "tailwindcss": "^3.4.4",
     "terser-webpack-plugin": "^5.3.10",
-    "vite": "^5.3.1",
+    "vite": "^5.3.4",
     "webpack": "^5.93.0",
     "webpack-cli": "^5.1.4"
   }
